style.css
@import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');

:root {
  --font-family-stack: 'Kanit', sans-serif, system-ui;
  --error-text-color: #9c0010;
  --main-background-color: rgba(243, 233, 216, 1);
  --form-background-color: white;
  --main-text-color: black;
  --inverse-text-color: white;
  --accent-background-color: #596D48;
  --transparent-background-color: rgba(0, 0, 0, 0.45);
  --top-padding: 7rem;
}


/* main */
*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  font-family: var(--font-family-stack);
}

.page-container {
  display: flex;
  min-height: 100vh;
}

.form-field input {
  font-size: 1.1rem;
  font-family: sans-serif, system-ui;
  padding: 2px;
  border: none;
  border-radius: 2px;
}

.form-field input:not(:focus) {
  outline: 1px solid lightgray;
}

/* left side */
.left {
  flex: 0 0 45%;
  background-image: url(./img/background.jpg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  text-align: center;
}

.logo {
  height: 100px;
}

.left .wrapper {
  padding-top: max(var(--top-padding), 15vh);
  min-height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;

}

.left .header {
  background-color: antiquewhite;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--transparent-background-color);
}


.left .heading-text {
  font-size: 2rem;
  font-weight: bold;
  color: var(--inverse-text-color);
}


/* right side */
.right {
  /* padding-top: var(--top-padding); */
  background-color: var(--main-background-color);
  width: 100%;
  display: flex;
  align-items: center;

}

.right .wrapper {
  width: 100%;
}


.right p:first-child {
  margin-top: 0;
}

.right p:not(form p) {
  padding: 0 2rem 0 2rem;
  max-width: 70ch;
}

.right form {
  background-color: var(--form-background-color);
  padding: .5rem 2rem .5rem;
}

.form-left,
.form-right {
  display: inline-flex;
  flex-direction: column;
  padding-right: 2rem;
}

.form-field {
  display: flex;
  flex-direction: column;
  padding-bottom: 16px;
}

.btns {
  padding: 1rem 2rem 0;
}

button.create-account-btn {
  background-color: var(--accent-background-color);
  color: var(--inverse-text-color);
  padding: .5em 2em;
  border: none;
  border-radius: 5px;
}

button.create-account-btn:hover {
  background-color: #637d4e;
  cursor: pointer;
}

button.create-account-btn:active {
  background-color: #6fac3e;
}


/* class styling */
.small-paragraph {
  font-size: .7rem;

}

.left .small-paragraph {
  color: var(--inverse-text-color);
}

.medium-paragraph {
  font-size: 1rem;

}

.regular-paragraph {
  font-size: 1.2rem;

}

p.error-message {
  color: var(--error-text-color);
  margin: 0;
  padding: 0;
}

.right form label {
  font-size: 1.2rem;
  color: rgba(0, 0, 0, 0.75);

}

.right .text-login {
  color: var(--accent-background-color)
}

.right .text-login:hover {
  cursor: pointer;
}

